--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Chain-of-Responsibiliy-Pattern</module>
         <module>Template-Design-Pattern</module>
         <module>State-Design-Pattern</module>
+        <module>Command-Design-Pattern</module>
     </modules>
 
     <properties>
